[tool.poetry]
name = "netlab"
version = "22.4.0"
description = "NETLAB+ VE SDK for Python"
license = "MIT"
readme = "README.md"
homepage = "https://www.netdevgroup.com/"
keywords = ["netlab", "development", "netlab", "ndg"]
authors = ["Aaron Schif <aschif@netdevgroup.com>", "Jeff Baier <jbaier@netdevgroup.com>"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Education',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Information Technology',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
]
include = [
    "netlab/py.typed",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "samples/**/*.py",
    "netlab/**/*.pyi"
]

[tool.poetry.scripts]
netlab = "netlab.cli:main"

[tool.poetry.urls]
"NDG Products" = "https://www.netdevgroup.com/products/"

[tool.poetry.dependencies]
python = ">= 3.8, <4"
click =  "^7.1.2"
tabulate =  "^0.8"
importlib-metadata = "^4.13.0"
typing-extensions = "^3.10.0"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"
pytest = ">= 3.0.1"
tox = ">= 2.4"
Sphinx = "^6.0.0"
recommonmark = ">=0.4.0"
sphinx-autobuild = ">= 0.6.0"
sphinx-rtd-theme = ">=1.0.0"
factory-boy = "^2.12.0"
mypy = "^1.0.0"
pytest-asyncio = "^0.15.1"
# sphinx-autoapi = "^1.8.1"
types-click = "^7.1.0"
types-tabulate = "^0.1.0"
types-cryptography = "^3.3.8"
cryptography = "^36.0.0"

[tool.mypy]
python_version = 3.8

files = [
    "netlab",
    "docs",
    "samples",
    "tests",
]

#strict = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
disallow_any_generics = true
#disallow_any_decorated = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_unreachable = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
